--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,31 @@
   "version": "0.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "index.html",
-    "default_icon": "imgs/icon.png"
+    "default_icon": {
+      "16": "imgs/icon.png",
+      "48": "imgs/icon.png",
+      "128": "imgs/icon.png"
+    }
   },
+  "permissions": ["storage", "declarativeContent", "activeTab", "scripting"],
+
+  "background": {
+    "service_worker": "popup/addPopup.js"
+  },
+  "web_accessible_resources": [{
+    "resources": [
+      "popup/index.html",
+      "popup/styles.css"
+    ],
+    "matches": [
+      "<all_urls>"
+    ]
+  }],
+
   "content_scripts": [
     {
-      "js": ["scripts/content.js"],
-      "css": ["scripts/closed.css"],
+      "js": ["page/content.js"],
+      "css": ["page/closed.css"],
       "matches": [
         "https://google.com/search*",
         "https://www.google.com/search*"
