--- a/popup/package.json
+++ b/popup/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build-watch": "tsc -b && vite build --watch",
+    "build-watch": "vite build --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
