--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "dev:content": "npx esbuild page/content.js --bundle --sourcemap --outfile=dist/content.bundle.js --watch",
+    "dev:content": "npx esbuild page/content.ts --bundle --sourcemap --outfile=dist/content.bundle.js --watch",
     "dev:popup": "cd popup && npm run dev",
     "dev:popup-watch": "cd popup && npm run build-watch",
-    "dev": "run-p dev:content dev:popup dev:popup-watch",
-    "build:content": "npx esbuild page/content.js --bundle --sourcemap --outfile=dist/content.bundle.js",
+    "dev": "run-p dev:popup dev:popup-watch dev:content",
+    "build:content": "npx esbuild page/content.ts --bundle --sourcemap --outfile=dist/content.bundle.js",
     "build:popup": "cd popup && npm run build",
     "build": "npm i && run-p build:content build:popup"
   },
